--- a/colorGame copy.html
+++ b/colorGame copy.html
@@ -17,7 +17,7 @@ Color Game</h1>
 	<span id="message"></span>
 	<button class="mode">Easy</button>
 	<button class="mode selected" >Hard</button>
-	<button class="mode">Extreme</button>
+	<button type="mode">EXTREME</button>
 </div>
 <div id="container">
 	<div class="square"></div>
